crates/etas_tests/fixtures/compiler/projects/negative/wildcard_ambiguity/src/app/left.es
module app.left;

public flow helper() -> unit {
    return;
}
